# OBS_Sad_Microphone_Detector_UI

./: .pylintrc  OBS Mic Mute Detector.spec  README.md  mypy.ini  obs-mic-mute-detector.code-workspace  pyproject.toml  resources.qrc
obs_mic_mute_detector/: __main__.py  app.py  log_file_handler.py  mic_disabled_widget.py  mic_levels_detector.py  qrc_resources.py  system_tray.py
qt_helpers/: run_app.py  widget.py  widget_id.py
