[tool.poetry]
name = "obs-mic-mute-detector"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.scripts]
app = "obs_mic_mute_detector.__main__:main"

[tool.poe.tasks]
qrc = "pyside6-rcc -o app/qrc_resources.py resources/resources.qrc"
windows-exe = "pyinstaller --onefile --windowed --noconfirm --name Forc --icon ../../resources/images/WindowsIcon.ico src/forc/app/__main__.py"
windows-dir = "pyinstaller --onedir --windowed --noconfirm --name Forc --icon ../../resources/images/WindowsIcon.ico src/forc/app/__main__.py"
mac-dir = "pyinstaller --onedir --windowed --noconfirm --name Forc --icon ../../resources/images/Icon256.icns src/forc/app/__main__.py"
mac-dmg = "create-dmg --volname Forc --volicon ../../resources/images/Icon256.icns --background ../../resources/images/Background_DMG.png --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon Forc.app 200 190 --app-drop-link 600 185 dist/Forc.dmg dist/Forc.app"
mac-build = "poetry run poe mac-dir && poetry run poe mac-app && poetry run poe mac-dmg"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
PySide6 = "^6.6.1"
qasync = "^0.27.1"
watchdog = "^4.0.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.4"
pylint = "^3.0.3"
pyinstaller = "^6.3.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
