[tool.poetry]
name = "obs-mic-mute-detector"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.scripts]
app = "obs_mic_mute_detector.__main__:main"

[tool.poe.tasks]
qrc = "pyside6-rcc -o obs_mic_mute_detector/qrc_resources.py resources.qrc"
windows-exe = "pyinstaller --onefile --windowed --noconfirm --name \"OBS Mic Mute Detector\" --icon resources/images/Icon.ico obs_mic_mute_detector/__main__.py"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
PySide6 = "^6.6.1"
qasync = "^0.27.1"
watchdog = "^4.0.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.4"
pylint = "^3.0.3"
pyinstaller = "^6.3.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
